docs/api/qiskit/0.25/qiskit.pulse.channels.mdx
---
title: channels
description: API reference for qiskit.pulse.channels
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit.pulse.channels
---

<span id="qiskit-pulse-channels" />

# qiskit.pulse.channels

This module defines Pulse Channels. Channels include:

> *   transmit channels, which should subclass `PulseChannel`
> *   receive channels, such as `AcquireChannel`
> *   non-signal “channels” such as `SnapshotChannel`, `MemorySlot` and `RegisterChannel`.

Novel channel types can often utilize the `ControlChannel`, but if this is not sufficient, new channel types can be created. Then, they must be supported in the PulseQobj schema and the assembler.

**Classes**

|                                                                                                                         |                                                                                                |
| ----------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------- |
| [`AcquireChannel`](#qiskit.pulse.channels.AcquireChannel "qiskit.pulse.channels.AcquireChannel")(index)                 | Acquire channels are used to collect data.                                                     |
| [`Channel`](#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")(index)                                      | Base class of channels.                                                                        |
| [`ControlChannel`](#qiskit.pulse.channels.ControlChannel "qiskit.pulse.channels.ControlChannel")(index)                 | Control channels provide supplementary control over the qubit to the drive channel.            |
| [`DriveChannel`](#qiskit.pulse.channels.DriveChannel "qiskit.pulse.channels.DriveChannel")(index)                       | Drive channels transmit signals to qubits which enact gate operations.                         |
| [`MeasureChannel`](#qiskit.pulse.channels.MeasureChannel "qiskit.pulse.channels.MeasureChannel")(index)                 | Measure channels transmit measurement stimulus pulses for readout.                             |
| [`MemorySlot`](#qiskit.pulse.channels.MemorySlot "qiskit.pulse.channels.MemorySlot")(index)                             | Memory slot channels represent classical memory storage.                                       |
| [`PulseChannel`](#qiskit.pulse.channels.PulseChannel "qiskit.pulse.channels.PulseChannel")(index)                       | Base class of transmit Channels.                                                               |
| [`RegisterSlot`](#qiskit.pulse.channels.RegisterSlot "qiskit.pulse.channels.RegisterSlot")(index)                       | Classical resister slot channels represent classical registers (low-latency classical memory). |
| [`SnapshotChannel`](#qiskit.pulse.channels.SnapshotChannel "qiskit.pulse.channels.SnapshotChannel")(\*args, \*\*kwargs) | Snapshot channels are used to specify instructions for simulators.                             |

### AcquireChannel

<Class id="qiskit.pulse.channels.AcquireChannel" github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/pulse/channels.py" signature="AcquireChannel(index)">
  Acquire channels are used to collect data.

  Channel class.

  **Parameters**

  **index** (`int`) – Index of channel.

  #### assign

  <Function id="qiskit.pulse.channels.AcquireChannel.assign" signature="assign(parameter, value)">
    Return a new channel with the input Parameter assigned to value.

    **Parameters**

    *   **parameter** (`Parameter`) – A parameter in this expression whose value will be updated.
    *   **value** (`Union`\[`ParameterExpression`, `float`, `int`]) – The new value to bind to.

    **Return type**

    [`Channel`](#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")

    **Returns**

    A new channel with updated parameters.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If the parameter is not present in the channel.
  </Function>

  #### index

  <Function id="qiskit.pulse.channels.AcquireChannel.index" signature="property index">
    Return the index of this channel. The index is a label for a control signal line typically mapped trivially to a qubit index. For instance, `DriveChannel(0)` labels the signal line driving the qubit labeled with index 0.

    **Return type**

    `Union`\[`int`, `ParameterExpression`]
  </Function>

  #### is\_parameterized

  <Function id="qiskit.pulse.channels.AcquireChannel.is_parameterized" signature="is_parameterized()">
    Return True iff the channel is parameterized.

    **Return type**

    `bool`
  </Function>

  #### name

  <Function id="qiskit.pulse.channels.AcquireChannel.name" signature="property name">
    Return the shorthand alias for this channel, which is based on its type and index.

    **Return type**

    `str`
  </Function>

  #### parameters

  <Function id="qiskit.pulse.channels.AcquireChannel.parameters" signature="property parameters">
    Parameters which determine the channel index.

    **Return type**

    `Set`
  </Function>
</Class>

### Channel

<Class id="qiskit.pulse.channels.Channel" github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/pulse/channels.py" signature="Channel(index)">
  Base class of channels. Channels provide a Qiskit-side label for typical quantum control hardware signal channels. The final label -> physical channel mapping is the responsibility of the hardware backend. For instance, `DriveChannel(0)` holds instructions which the backend should map to the signal line driving gate operations on the qubit labeled (indexed) 0.

  When serialized channels are identified by their serialized name `<prefix><index>`. The type of the channel is interpreted from the prefix, and the index often (but not always) maps to the qubit index. All concrete channel classes must have a `prefix` class attribute (and instances of that class have an index attribute). Base classes which have `prefix` set to `None` are prevented from being instantiated.

  To implement a new channel inherit from [`Channel`](#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel") and provide a unique string identifier for the `prefix` class attribute.

  Channel class.

  **Parameters**

  **index** (`int`) – Index of channel.

  #### assign

  <Function id="qiskit.pulse.channels.Channel.assign" signature="assign(parameter, value)">
    Return a new channel with the input Parameter assigned to value.

    **Parameters**

    *   **parameter** (`Parameter`) – A parameter in this expression whose value will be updated.
    *   **value** (`Union`\[`ParameterExpression`, `float`, `int`]) – The new value to bind to.

    **Return type**

    [`Channel`](#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")

    **Returns**

    A new channel with updated parameters.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If the parameter is not present in the channel.
  </Function>

  #### index

  <Function id="qiskit.pulse.channels.Channel.index" signature="property index">
    Return the index of this channel. The index is a label for a control signal line typically mapped trivially to a qubit index. For instance, `DriveChannel(0)` labels the signal line driving the qubit labeled with index 0.

    **Return type**

    `Union`\[`int`, `ParameterExpression`]
  </Function>

  #### is\_parameterized

  <Function id="qiskit.pulse.channels.Channel.is_parameterized" signature="is_parameterized()">
    Return True iff the channel is parameterized.

    **Return type**

    `bool`
  </Function>

  #### name

  <Function id="qiskit.pulse.channels.Channel.name" signature="property name">
    Return the shorthand alias for this channel, which is based on its type and index.

    **Return type**

    `str`
  </Function>

  #### parameters

  <Function id="qiskit.pulse.channels.Channel.parameters" signature="property parameters">
    Parameters which determine the channel index.

    **Return type**

    `Set`
  </Function>

  #### prefix

  <Attribute id="qiskit.pulse.channels.Channel.prefix" attributeValue="None">
    A shorthand string prefix for characterizing the channel type.
  </Attribute>
</Class>

### ControlChannel

<Class id="qiskit.pulse.channels.ControlChannel" github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/pulse/channels.py" signature="ControlChannel(index)">
  Control channels provide supplementary control over the qubit to the drive channel. These are often associated with multi-qubit gate operations. They may not map trivially to a particular qubit index.

  Channel class.

  **Parameters**

  **index** (`int`) – Index of channel.

  #### assign

  <Function id="qiskit.pulse.channels.ControlChannel.assign" signature="assign(parameter, value)">
    Return a new channel with the input Parameter assigned to value.

    **Parameters**

    *   **parameter** (`Parameter`) – A parameter in this expression whose value will be updated.
    *   **value** (`Union`\[`ParameterExpression`, `float`, `int`]) – The new value to bind to.

    **Return type**

    [`Channel`](#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")

    **Returns**

    A new channel with updated parameters.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If the parameter is not present in the channel.
  </Function>

  #### index

  <Function id="qiskit.pulse.channels.ControlChannel.index" signature="property index">
    Return the index of this channel. The index is a label for a control signal line typically mapped trivially to a qubit index. For instance, `DriveChannel(0)` labels the signal line driving the qubit labeled with index 0.

    **Return type**

    `Union`\[`int`, `ParameterExpression`]
  </Function>

  #### is\_parameterized

  <Function id="qiskit.pulse.channels.ControlChannel.is_parameterized" signature="is_parameterized()">
    Return True iff the channel is parameterized.

    **Return type**

    `bool`
  </Function>

  #### name

  <Function id="qiskit.pulse.channels.ControlChannel.name" signature="property name">
    Return the shorthand alias for this channel, which is based on its type and index.

    **Return type**

    `str`
  </Function>

  #### parameters

  <Function id="qiskit.pulse.channels.ControlChannel.parameters" signature="property parameters">
    Parameters which determine the channel index.

    **Return type**

    `Set`
  </Function>
</Class>

### DriveChannel

<Class id="qiskit.pulse.channels.DriveChannel" github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/pulse/channels.py" signature="DriveChannel(index)">
  Drive channels transmit signals to qubits which enact gate operations.

  Channel class.

  **Parameters**

  **index** (`int`) – Index of channel.

  #### assign

  <Function id="qiskit.pulse.channels.DriveChannel.assign" signature="assign(parameter, value)">
    Return a new channel with the input Parameter assigned to value.

    **Parameters**

    *   **parameter** (`Parameter`) – A parameter in this expression whose value will be updated.
    *   **value** (`Union`\[`ParameterExpression`, `float`, `int`]) – The new value to bind to.

    **Return type**

    [`Channel`](#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")

    **Returns**

    A new channel with updated parameters.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If the parameter is not present in the channel.
  </Function>

  #### index

  <Function id="qiskit.pulse.channels.DriveChannel.index" signature="property index">
    Return the index of this channel. The index is a label for a control signal line typically mapped trivially to a qubit index. For instance, `DriveChannel(0)` labels the signal line driving the qubit labeled with index 0.

    **Return type**

    `Union`\[`int`, `ParameterExpression`]
  </Function>

  #### is\_parameterized

  <Function id="qiskit.pulse.channels.DriveChannel.is_parameterized" signature="is_parameterized()">
    Return True iff the channel is parameterized.

    **Return type**

    `bool`
  </Function>

  #### name

  <Function id="qiskit.pulse.channels.DriveChannel.name" signature="property name">
    Return the shorthand alias for this channel, which is based on its type and index.

    **Return type**

    `str`
  </Function>

  #### parameters

  <Function id="qiskit.pulse.channels.DriveChannel.parameters" signature="property parameters">
    Parameters which determine the channel index.

    **Return type**

    `Set`
  </Function>
</Class>

### MeasureChannel

<Class id="qiskit.pulse.channels.MeasureChannel" github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/pulse/channels.py" signature="MeasureChannel(index)">
  Measure channels transmit measurement stimulus pulses for readout.

  Channel class.

  **Parameters**

  **index** (`int`) – Index of channel.

  #### assign

  <Function id="qiskit.pulse.channels.MeasureChannel.assign" signature="assign(parameter, value)">
    Return a new channel with the input Parameter assigned to value.

    **Parameters**

    *   **parameter** (`Parameter`) – A parameter in this expression whose value will be updated.
    *   **value** (`Union`\[`ParameterExpression`, `float`, `int`]) – The new value to bind to.

    **Return type**

    [`Channel`](#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")

    **Returns**

    A new channel with updated parameters.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If the parameter is not present in the channel.
  </Function>

  #### index

  <Function id="qiskit.pulse.channels.MeasureChannel.index" signature="property index">
    Return the index of this channel. The index is a label for a control signal line typically mapped trivially to a qubit index. For instance, `DriveChannel(0)` labels the signal line driving the qubit labeled with index 0.

    **Return type**

    `Union`\[`int`, `ParameterExpression`]
  </Function>

  #### is\_parameterized

  <Function id="qiskit.pulse.channels.MeasureChannel.is_parameterized" signature="is_parameterized()">
    Return True iff the channel is parameterized.

    **Return type**

    `bool`
  </Function>

  #### name

  <Function id="qiskit.pulse.channels.MeasureChannel.name" signature="property name">
    Return the shorthand alias for this channel, which is based on its type and index.

    **Return type**

    `str`
  </Function>

  #### parameters

  <Function id="qiskit.pulse.channels.MeasureChannel.parameters" signature="property parameters">
    Parameters which determine the channel index.

    **Return type**

    `Set`
  </Function>
</Class>

### MemorySlot

<Class id="qiskit.pulse.channels.MemorySlot" github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/pulse/channels.py" signature="MemorySlot(index)">
  Memory slot channels represent classical memory storage.

  Channel class.

  **Parameters**

  **index** (`int`) – Index of channel.

  #### assign

  <Function id="qiskit.pulse.channels.MemorySlot.assign" signature="assign(parameter, value)">
    Return a new channel with the input Parameter assigned to value.

    **Parameters**

    *   **parameter** (`Parameter`) – A parameter in this expression whose value will be updated.
    *   **value** (`Union`\[`ParameterExpression`, `float`, `int`]) – The new value to bind to.

    **Return type**

    [`Channel`](#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")

    **Returns**

    A new channel with updated parameters.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If the parameter is not present in the channel.
  </Function>

  #### index

  <Function id="qiskit.pulse.channels.MemorySlot.index" signature="property index">
    Return the index of this channel. The index is a label for a control signal line typically mapped trivially to a qubit index. For instance, `DriveChannel(0)` labels the signal line driving the qubit labeled with index 0.

    **Return type**

    `Union`\[`int`, `ParameterExpression`]
  </Function>

  #### is\_parameterized

  <Function id="qiskit.pulse.channels.MemorySlot.is_parameterized" signature="is_parameterized()">
    Return True iff the channel is parameterized.

    **Return type**

    `bool`
  </Function>

  #### name

  <Function id="qiskit.pulse.channels.MemorySlot.name" signature="property name">
    Return the shorthand alias for this channel, which is based on its type and index.

    **Return type**

    `str`
  </Function>

  #### parameters

  <Function id="qiskit.pulse.channels.MemorySlot.parameters" signature="property parameters">
    Parameters which determine the channel index.

    **Return type**

    `Set`
  </Function>
</Class>

### PulseChannel

<Class id="qiskit.pulse.channels.PulseChannel" github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/pulse/channels.py" signature="PulseChannel(index)">
  Base class of transmit Channels. Pulses can be played on these channels.

  Channel class.

  **Parameters**

  **index** (`int`) – Index of channel.

  #### assign

  <Function id="qiskit.pulse.channels.PulseChannel.assign" signature="assign(parameter, value)">
    Return a new channel with the input Parameter assigned to value.

    **Parameters**

    *   **parameter** (`Parameter`) – A parameter in this expression whose value will be updated.
    *   **value** (`Union`\[`ParameterExpression`, `float`, `int`]) – The new value to bind to.

    **Return type**

    [`Channel`](#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")

    **Returns**

    A new channel with updated parameters.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If the parameter is not present in the channel.
  </Function>

  #### index

  <Function id="qiskit.pulse.channels.PulseChannel.index" signature="property index">
    Return the index of this channel. The index is a label for a control signal line typically mapped trivially to a qubit index. For instance, `DriveChannel(0)` labels the signal line driving the qubit labeled with index 0.

    **Return type**

    `Union`\[`int`, `ParameterExpression`]
  </Function>

  #### is\_parameterized

  <Function id="qiskit.pulse.channels.PulseChannel.is_parameterized" signature="is_parameterized()">
    Return True iff the channel is parameterized.

    **Return type**

    `bool`
  </Function>

  #### name

  <Function id="qiskit.pulse.channels.PulseChannel.name" signature="property name">
    Return the shorthand alias for this channel, which is based on its type and index.

    **Return type**

    `str`
  </Function>

  #### parameters

  <Function id="qiskit.pulse.channels.PulseChannel.parameters" signature="property parameters">
    Parameters which determine the channel index.

    **Return type**

    `Set`
  </Function>
</Class>

### RegisterSlot

<Class id="qiskit.pulse.channels.RegisterSlot" github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/pulse/channels.py" signature="RegisterSlot(index)">
  Classical resister slot channels represent classical registers (low-latency classical memory).

  Channel class.

  **Parameters**

  **index** (`int`) – Index of channel.

  #### assign

  <Function id="qiskit.pulse.channels.RegisterSlot.assign" signature="assign(parameter, value)">
    Return a new channel with the input Parameter assigned to value.

    **Parameters**

    *   **parameter** (`Parameter`) – A parameter in this expression whose value will be updated.
    *   **value** (`Union`\[`ParameterExpression`, `float`, `int`]) – The new value to bind to.

    **Return type**

    [`Channel`](#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")

    **Returns**

    A new channel with updated parameters.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If the parameter is not present in the channel.
  </Function>

  #### index

  <Function id="qiskit.pulse.channels.RegisterSlot.index" signature="property index">
    Return the index of this channel. The index is a label for a control signal line typically mapped trivially to a qubit index. For instance, `DriveChannel(0)` labels the signal line driving the qubit labeled with index 0.

    **Return type**

    `Union`\[`int`, `ParameterExpression`]
  </Function>

  #### is\_parameterized

  <Function id="qiskit.pulse.channels.RegisterSlot.is_parameterized" signature="is_parameterized()">
    Return True iff the channel is parameterized.

    **Return type**

    `bool`
  </Function>

  #### name

  <Function id="qiskit.pulse.channels.RegisterSlot.name" signature="property name">
    Return the shorthand alias for this channel, which is based on its type and index.

    **Return type**

    `str`
  </Function>

  #### parameters

  <Function id="qiskit.pulse.channels.RegisterSlot.parameters" signature="property parameters">
    Parameters which determine the channel index.

    **Return type**

    `Set`
  </Function>
</Class>

### SnapshotChannel

<Class id="qiskit.pulse.channels.SnapshotChannel" github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/pulse/channels.py" signature="SnapshotChannel(*args, **kwargs)">
  Snapshot channels are used to specify instructions for simulators.

  Create new snapshot channel.

  #### assign

  <Function id="qiskit.pulse.channels.SnapshotChannel.assign" signature="assign(parameter, value)">
    Return a new channel with the input Parameter assigned to value.

    **Parameters**

    *   **parameter** (`Parameter`) – A parameter in this expression whose value will be updated.
    *   **value** (`Union`\[`ParameterExpression`, `float`, `int`]) – The new value to bind to.

    **Return type**

    [`Channel`](#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")

    **Returns**

    A new channel with updated parameters.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If the parameter is not present in the channel.
  </Function>

  #### index

  <Function id="qiskit.pulse.channels.SnapshotChannel.index" signature="property index">
    Return the index of this channel. The index is a label for a control signal line typically mapped trivially to a qubit index. For instance, `DriveChannel(0)` labels the signal line driving the qubit labeled with index 0.

    **Return type**

    `Union`\[`int`, `ParameterExpression`]
  </Function>

  #### is\_parameterized

  <Function id="qiskit.pulse.channels.SnapshotChannel.is_parameterized" signature="is_parameterized()">
    Return True iff the channel is parameterized.

    **Return type**

    `bool`
  </Function>

  #### name

  <Function id="qiskit.pulse.channels.SnapshotChannel.name" signature="property name">
    Return the shorthand alias for this channel, which is based on its type and index.

    **Return type**

    `str`
  </Function>

  #### parameters

  <Function id="qiskit.pulse.channels.SnapshotChannel.parameters" signature="property parameters">
    Parameters which determine the channel index.

    **Return type**

    `Set`
  </Function>
</Class>

